--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,29 @@
 version: "3.8"
 services:
-  postgesql:
+  postgresql:
     image: postgres:12-alpine
-    container_name: api_postgesql
+    container_name: postgresql
     ports:
       - "5432:5432"
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=auth_db
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=1
+      - POSTGRES_DB=iot_project
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - pgdata:/var/lib/postgresql/data
+
+  redis:
+    image: redis/redis-stack-server:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping"]
+    volumes:
+      - redis_data:/data
+
+volumes:
+  pgdata:
+  redis_data:
